feat : Content Provider for favourite images

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,11 @@
             android:name=".MyService"
             android:enabled="true"
             android:exported="true"/>
+
+        <provider
+            android:authorities="com.subhrajyoti.wallify.app"
+            android:name=".db.ImageProvider"
+            android:exported="false" />
     </application>
 
 </manifest>
