--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,10 @@
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".MyApplication"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -26,8 +26,8 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <receiver
             android:name=".MyReceiver"
@@ -41,12 +41,14 @@
         <service
             android:name=".MyService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
 
         <provider
-            android:authorities="com.subhrajyoti.wallify.app"
             android:name=".db.ImageProvider"
+            android:authorities="com.subhrajyoti.wallify.app"
             android:exported="false" />
+
+        <activity android:name=".FavActivity"/>
     </application>
 
 </manifest>
