--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,12 @@ allprojects {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.squareup.picasso:picasso:2.5.1'
     compile 'com.github.garretyoder:Colorful:1.1'
+    compile 'com.google.firebase:firebase-core:9.6.0'
+    testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
