--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.1'
     compile 'com.github.garretyoder:Colorful:1.1'
     compile 'com.google.firebase:firebase-core:9.6.0'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
     testCompile 'junit:junit:4.12'
 }
 
