Use PhotoView to make gallery nicer

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.1'
     compile 'com.github.garretyoder:Colorful:1.1'
     compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.github.chrisbanes:PhotoView:2.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     testCompile 'junit:junit:4.12'
 }
