--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         }
     }
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.subhrajyoti.wallify"
         minSdkVersion 15
@@ -43,11 +43,11 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
-    compile 'com.squareup.picasso:picasso:2.5.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.garretyoder:Colorful:1.1'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.github.chrisbanes:PhotoView:2.0.0'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.4.6'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     testCompile 'junit:junit:4.12'
 }
-apply plugin: 'me.tatarka.retrolambda'
