--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    return void
+    buildFeatures {
+        viewBinding = true
+    }
 }
 allprojects {
     repositories {
@@ -45,8 +47,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.garretyoder:Colorful:1.1'
-    implementation 'com.jakewharton:butterknife:10.0.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.9.1'
     testImplementation 'junit:junit:4.12'
     implementation "androidx.core:core-ktx:1.3.0"
